--- a/work/asset/a_beginner/css/src/layout_01_test_02.css
+++ b/work/asset/a_beginner/css/src/layout_01_test_02.css
@@ -1,10 +1,12 @@
 /* layout_01_test_02.css */
 
 /* reset.css */
-html, body {margin: 0;}
+html, body {margin: 0; padding: 0;}
 h1, h2, h3, h4, h5, h6 {margin: 0; padding: 0;}
 ul, ol, li {margin: 0; padding: 0; list-style: none;}
 a {text-decoration: none; color: inherit;}
+
+/* common.css */
 .clearfix::after,
 .clearfix:after {content: " "; display: block; width: 100%; height: 0; clear: both;}
 
@@ -27,7 +29,16 @@ h1 {width: 180px; height: 180px; background-color: #fff;
 /* container===================================================================*/
 .container {width: 960px; height: 1800px; background-color: #daf;}
 #adBanner {width: 960px; height: 500px; background-color: #fff;}
-#contentBox {width: 960px; height: 900px; background-color: #fff;}
+
+#contentBox {width: 960px; height: 900px; background-color: #fff;
+             padding: 35px; box-sizing: border-box;}
+  .side {width: 240px; height: 900px; background-color: #000;}
+    .snb {float: left;}
+    .best {float: right;}
+  .mid {width: 480px; height: 450px; background-color: #000;}
+    .mv {float: left;}
+    .best {float: left;}
+
 #contentList {width: 960px; height: 400px; background-color: #fff;}
 
 /* footBox=====================================================================*/
