--- a/work/asset/a_beginner/css/src/layout_02_test.css
+++ b/work/asset/a_beginner/css/src/layout_02_test.css
@@ -1,10 +1,12 @@
 /* layout_02_test.css */
 
 /* reset.css */
-html, body {margin: 0;}
+html, body {margin: 0; padding: 0;}
 h1, h2, h3, h4, h5, h6 {margin: 0; padding: 0;}
 ul, ol, li {margin: 0; padding: 0; list-style: none;}
 a {text-decoration: none; color: inherit;}
+
+/* common.css */
 .clearfix::after,
 .clearfix:after {content: " "; display: block; width: 100%; height: 0; clear: both;}
 
