--- a/work/asset/a_beginner/css/src/layout_01_test_02.css
+++ b/work/asset/a_beginner/css/src/layout_01_test_02.css
@@ -30,21 +30,26 @@ h1 {width: 180px; height: 180px; background-color: #fff;
 .container {width: 960px; height: 1800px; background-color: #daf;}
 #adBanner {width: 960px; height: 500px; background-color: #fff;}
 
-#contentBox {width: 960px; height: 900px; background-color: #fff;
+#contentBox {width: 960px; height: 900px; background-color: #ffa;
              padding: 35px; box-sizing: border-box;}
-  .side {width: 240px; height: 900px; background-color: #000;}
-    .snb {float: left;}
-    .best {float: right;}
-  .mid {width: 480px; height: 450px; background-color: #000;}
-    .mv {float: left;}
-    .best {float: left;}
+  .snb {margin: 10px; width: 20%; height: 95%; background-color: #ccc; float: left;}
+  .best_1 {margin: 10px; width: 20%; height: 95%; background-color: #ccc; float: right;}
+  .mv {margin: 10px; float: left; width: 53%; height: 45%; background-color: #ccc;}
+  .best_2 {margin: 10px; float: left; width: 53%; height: 47%; background-color: #ccc;}
 
-#contentList {width: 960px; height: 400px; background-color: #fff;}
+#contentList {padding: 35px; box-sizing: border-box; width: 960px; height: 400px; background-color: #fff;}
+#contentList > ul > li {margin: 10px; float: left; width: 20%; height: 330px; background-color: #ccc;}
+#contentList > ul > li:nth-child(2) {width: 53%;}
 
 /* footBox=====================================================================*/
 #footBox {width: 960px; height: 350px; background-color: #aff;
           padding: 35px; box-sizing: border-box;}
 h2 {width: 150px; height: 150px; background-color: #fff; float: left; margin-right: 50px;}
-.info {width: 500px; height: 250px; background-color: #fff; float: left; margin-right: 40px;}
-.family_menu {width: 150px; height: 50px; background-color: #fff; float: left;}
 
+.info {width: 500px; height: 250px; background-color: #fff; float: left; margin-right: 40px;}
+#footBox > .info > ul {width: 100%; height: 100%;}
+#footBox > .info > ul > li {margin-bottom: 10px; width: 100%; height: 25%; background-color: #ccc;}
+#footBox > .info > ul > li:nth-child(2) {height: 42%;}
+#footBox > .info > ul > li:last-child {margin-bottom: 0;}
+
+.family_menu {width: 150px; height: 50px; background-color: #fff; float: left;}
