--- a/work/asset/b_step_01_layout/css/src/semantic_layout_test_02.css
+++ b/work/asset/b_step_01_layout/css/src/semantic_layout_test_02.css
@@ -1,1 +1,81 @@
 /* semantic_layout_test_02.css */
+
+#wrap {margin: 50px; width: 960px; height: auto; border: 2px solid;}
+
+/* headBox =================== */
+#headBox {box-sizing: border-box; padding: 10px 13px; width: 100%; height: 80px; background-color: #fff;}
+  h1 {margin-top: 19px; /*margin-top: 적용안됨*/ float: left; width: 140px; height: 36px; background-color: #f0a;}
+  #headBox > .nav_1 {float: right; width: 300px; height: 16px; background-color: #f0a;}
+  #headBox > .nav_2 {margin-top: 19px; float: right; width: 780px; height: 18px; background-color: #f0a;}
+
+/* adBox ===================== */
+#adBox {box-sizing: border-box; padding: 177px; width: 100%; height: 640px; background-color: #aaa;}
+  #adBox > div {margin: auto; width: 300px; height: 350px; background-color: #0af;}
+
+/* snbBox ==================== */
+#snbBox {box-sizing: border-box; padding: 67px 0; width: 100%; height: 690px; background-color: #fff;}
+  #snbBox > .snb_title {margin: auto; width: 460px; height: 50px; background-color: #ccc;}
+    .snb_title > h2 {margin: auto; width: 303px; height: 30px; background-color: #777;}
+    .snb_title > div {margin-top: 4px; width: 100%; height: 16px; background-color: #777;}
+  #snbBox > .snb_box {margin: auto; margin-top: 20px; box-sizing: border-box; padding: 17px 23px; width: 939px; height: 437px;}
+    .snb_box > div {margin-top: 31px; margin-right: 53px; float: left; width: 240px; height: 335px; background-color: #777;}
+    .snb_box > div:nth-child(2) {margin-top: 0; width: 300px; height: 400px;}
+    .snb_box > div:last-child {margin-right: 0;}
+  #snbBox > div {margin: auto; margin-top: 13px; width: 140px; height: 27px; background-color: #ccc;}
+
+/* serviceBox ================ */
+#serviceBox {box-sizing: border-box; padding: 80px 0; width: 100%; height: 710px; background-color: #ccc;}
+  #serviceBox > .service_title {margin: auto; margin-top: 77px; width: 620px; height: 60px; background-color: #aaa;}
+    .service_title > h2 {margin: auto; width: 303px; height: 30px; background-color: #777;}
+    .service_title > div {margin-top: 15px; width: 100%; height: 16px; background-color: #777;}
+  #serviceBox > .service_img {margin: auto; margin-top: 26px; width: 940px; height: 370px; background-color: #aaa;}
+    .service_img > div {float: left; width: 270px; height: 100%; background-color: #777;}
+    .service_img > div:nth-child(2) {background-color: #a5f;}
+
+/* newsBox =================== */
+#newsBox {box-sizing: border-box; padding: 82px 0; width: 100%; height: 722px; background-color: #fff;}
+  #newsBox > .news_title {margin: auto; margin-top: 38px; width: 462px; height: 60px; background-color: #ccc;}
+    .news_title > h2 {margin: auto; width: 303px; height: 30px; background-color: #777;}
+    .news_title > div {margin-top: 15px; width: 100%; height: 16px; background-color: #777;}
+  #newsBox > .news_box {margin: auto; margin-top: 43px; box-sizing: border-box; padding: 6px 23px; width: 940px; height: 423px; background-color: #ccc;}
+    .news_box > div {margin-right: 33px; float: left; width: 275px; height: 403px; background-color: #777;}
+    .news_box > div:last-child {margin-right: 0;}
+
+/* privacyBox ================ */
+#privacyBox {box-sizing: border-box; padding: 51px 0; width: 100%; height: 663px; background-color: #ccc;}
+  #privacyBox > h2 {margin: auto; margin-top: 69px; width: 140px; height: 48px; background-color: #fff;}
+  #privacyBox > .privacy_text {margin: auto; margin-top: 36px; box-sizing: border-box; padding: 0 50px; width: 395px; height: 189px; background-color: #fff;}
+    .privacy_text > div:nth-child(1) {margin-bottom: 23px; width: 300px; height: 95px; background-color: #0af;}
+    .privacy_text > div:nth-child(2) {margin-bottom: 11px; width: 300px; height: 30px; background-color: #0af;}
+    .privacy_text > div:last-child {margin: auto; width: 90px; height: 25px; background-color: #0af;}
+  #privacyBox > .privacy_box {margin: auto; margin-top: 36px; box-sizing: border-box; padding: 16px 59px 0 59px; width: 779px; height: 183px; background-color: #fff;}
+    .privacy_box div {margin-right: 45px; /*margin-right: 60px;*/ background-color: #5ad;}
+    .privacy_box div:nth-child(4n) {margin-right: 0;}
+    .big_box > div {float: left; width: 120px; height: 120px;}
+    .small_box > div {margin-top: 7px; float: left; width: 120px; height: 40px;}
+
+/* fnbBox ==================== */
+#fnbBox {width: 100%; height: 95px;}
+  #fnbBox > div {width: 100%; height: 50%; background-color: #fff;}
+    #fnbBox nav {background-color: #5ad;}
+    .fnb_1_nav {margin: auto; margin-top: 2px; box-sizing: border-box; padding: 13px 16px; width: 779px; height: 45px;}
+      .fnb_1_nav > div {float: left; width: 35px; height: 21px; background-color: #03f;}
+      .fnb_1_nav > div:nth-child(2) {width: 64px; margin-right: 15px;}
+      .fnb_1_nav > div:nth-child(3) {width: 104px; margin-right: 7px;}
+      .fnb_1_nav > div:nth-child(4) {width: 80px; margin-right: 34px;}
+      .fnb_1_nav > div:nth-child(5) {width: 50px; margin-right: 44px;}
+      .fnb_1_nav > div:nth-child(6) {width: 60px; margin-right: 30px;}
+      .fnb_1_nav > div:nth-child(7) {width: 80px; margin-right: 30px;}
+      .fnb_1_nav > div:nth-child(8) {width: 60px; margin-right: 52px;}
+      .fnb_1_nav > div:nth-child(9) {width: 35px;}
+
+    .fnb_2_nav {margin: auto; margin-top: 16px; box-sizing: border-box; padding: 0 43px; width: 620px; height: 20px;}
+      .fnb_2_nav > div {float: left; width: 83px; height: 100%; background-color: #03f;}
+      .fnb_2_nav > div:nth-child(2) {width: 62px; margin-right: 80px;}
+      .fnb_2_nav > div:nth-child(3) {margin-right: 69px;}
+      .fnb_2_nav > div:nth-child(4) {margin-right: 69px;}
+
+/* footBox =================== */
+#footBox {box-sizing: border-box; padding: 10px; width: 100%; height: 45px; background-color: #777;}
+  #footBox > .address {margin: auto; width: 300px; height: 26px;}
+    .address > div {width: 100%; height: 50%; background-color: #03f; border: 1px solid;}
