--- a/work/asset/b_step_01_layout/css/base/reset.css
+++ b/work/asset/b_step_01_layout/css/base/reset.css
@@ -28,3 +28,6 @@ header, nav, article, section, footer, aside, figure, figcaption {display: block
   display: block; width: 100%; height: 100%;
   background-repeat: no-repeat;
   background-position: center;}
+
+/* 접근성 */
+a:focus, button:focus {outline: 2px solid #fa0; position: relative; z-index: 1000;}
