--- a/work/asset/b_step_01_layout/css/src/galleria/adBox.css
+++ b/work/asset/b_step_01_layout/css/src/galleria/adBox.css
@@ -10,16 +10,34 @@
       auto   - 내용에 따라 스크롤 유무를 판단하여 처리
       normal - 아무런 처리하지 않는 기본상태
 */
+
+/** color:
+    black: #333;
+*/
+
 #adBox {
   overflow: hidden;
   position: relative;
   margin-top: 68px;
   width: 100%; height: 650px; background-color: #ccc;}
 
+/* ad_indicator --------------------------------------------------- */
   #adBox > .indicator {
     position: absolute; bottom: 25px; right: 22px; z-index: 400;
-    width: 134px; height: 25px; background-color: #adf;}
+    box-sizing: border-box; padding: 6px 12px 6px;
+    width: 134px; height: 25px; background-color: #adf;
+    background-color: #333;
+    border-radius: 12px;
+  }
 
+  .banner_play_btn {width: 12px; height: 12px; float: left; background-color: #fff;}
+  .banner_arrow_btn {width: 90px; height: 12px; float: left; margin-left: 8px; background-color: #fff;}
+  .indicator_selector_btn {
+    position: absolute; top: 6px; right: 26px;
+    width: 64px; height: 12px; background-color: #fa0;}
+
+
+/* ad_banner ------------------------------------------------------ */
   #adBox > .ad_banner {
     position: relative;
     width: 100%; height: 100%;}
@@ -27,12 +45,24 @@
   #adBox > .ad_banner > div {
     position: absolute; top: 0; left: 0; z-index: 100;
     width: 100%; height: 100%;
-    text-align: center; line-height: 650px; font-size: 4rem; color: #fff;}
+    /*text-align: center; line-height: 650px; font-size: 4rem;*/ color: #333;}
 
     .banner_01 {background-color: #af1;}
     .banner_02 {background-color: #b82;}
     .banner_03 {background-color: #c43;}
     .banner_04 {background-color: #d14;}
+
+  /* overflow test */
+  .ad_banner p {margin: auto;
+    width: 300px; height: 300px;
+    background-color: #aaa;
+    overflow: hidden;}
+
+  .ad_banner p > span {
+    display: block; padding-right: 20px;
+    width: 100%; height: 100%; background-color: #c5a;
+    overflow-y: auto; color: #fff;}
+
   /** 차후 자바스크립트를 통해 '.active'의
       이름이 html문서에 삽입되어 기능을 처리하도록 함 */
   #adBox > .ad_banner > div.active {z-index: 110;}
