--- a/work/asset/b_step_01_layout/css/src/galleria/headBox.css
+++ b/work/asset/b_step_01_layout/css/src/galleria/headBox.css
@@ -15,13 +15,53 @@
     border-right: 1px solid #363636;
     width: 150px; height: inherit; float: left;
     background-color: #fff;}
+  h1 > a {background-image: url("../../../img/galleria_img/headBox/logo.png");}
 
-  #gnb {width: 805px; height: inherit; float: left;
-    background-color: #dad;}
+  #gnb {width: 805px; height: inherit; float: left;}
   #gnb > ul {width: 100%; height: inherit;}
   #gnb > ul > li {
     border-right: 1px solid #363636;
     float: left; width: 160px; height: inherit;}
+  #gnb > ul > li > a {background-image: url("../../../img/galleria_img/headBox/gnb_area.png");}
+  #gnb > ul > li > a:hover {background-image: url("../../../img/galleria_img/headBox/gnb_on.png");
+    background-color: #fff;}
+    #gnb li > a:focus {box-sizing: border-box; border-bottom: 3px solid #fff;}
+    #gnb li:nth-child(1) > a {background-position: 42px center;}
+    #gnb li:nth-child(2) > a {background-position: -119px center;}
+    #gnb li:nth-child(3) > a {background-position: -280px center;}
+    #gnb li:nth-child(4) > a {background-position: -441px center;}
+    #gnb li:nth-child(5) > a {background-position: -602px center;}
+
+/* gnb_하위 내용*/
+    .sub_nav {box-sizing: border-box; padding: 4px;
+      width: 100%; height: auto; background-color: #fff;
+      border: 1px solid #363636; border-top: 0; border-bottom: 0;}
+    .sub_nav > li {width: 100%; height: auto; margin-bottom: 3px; font-size: 0.85rem; color: #333; text-align: center;}
+
+    .sub_nav > li > a {position: relative; display: block;}
+    .sub_nav > li > a:hover {font-weight: bold; font-size: 1rem; border-bottom: 1px solid #333;}
+    .sub_nav > li > a:focus {color: #0af; outline: 0;}
+    .sub_nav > li > a:before,
+    .sub_nav > li > a::before {
+      content: " "; display: block; position: absolute;
+      width: 0; height: 0;
+      bottom: -2px; left: 50%; border-bottom: 2px solid #333; z-index: 100;
+      transition: all 300ms ease;}
+
+    .sub_nav > li > a:focus:before,
+    .sub_nav > li > a:focus::before {width: 100%; left: 0;}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* inherit 예시 */
 /*  #gnb li:nth-child(1) {
@@ -40,8 +80,7 @@
 */
 
 
-  #unb {width: 250px; height: inherit; float: right;
-    background-color: #0af;}
+  #unb {width: 250px; height: inherit; float: right;}
   #unb > ul {float: left; width: 213px; height: inherit;}
   #unb > ul > li {
     box-sizing: border-box; padding: 0 5px;
@@ -49,12 +88,26 @@
     background-image: url("../../../img/galleria_img/headBox/unb_vertical.png");
     background-repeat: no-repeat;
     background-position: right 29px;}
-    
+
   #unb > ul > li:nth-child(1) {width: 54px;}
   #unb > ul > li:nth-child(2) {width: 46px;}
   #unb > ul > li:nth-child(3) {width: 59px;}
   #unb > ul > li:nth-child(4) {width: 54px;}
 
-  #unb > button {float: right;
+  #unb > ul > li:nth-child(1) > a {background-image: url("../../../img/galleria_img/headBox/login.png");}
+  #unb > ul > li:nth-child(2) > a {background-image: url("../../../img/galleria_img/headBox/join.png");}
+  #unb > ul > li:nth-child(3) > a {background-image: url("../../../img/galleria_img/headBox/sitemap.png");}
+  #unb > ul > li:nth-child(4) > a {background-image: url("../../../img/galleria_img/headBox/korean.png");}
+
+  #unb > ul > li:nth-child(1) > a:hover {background-image: url("../../../img/galleria_img/headBox/login_on.png");}
+  #unb > ul > li:nth-child(2) > a:hover {background-image: url("../../../img/galleria_img/headBox/join_on.png");}
+  #unb > ul > li:nth-child(3) > a:hover {background-image: url("../../../img/galleria_img/headBox/sitemap_on.png");}
+
+
+  #unb > button {
+    float: right;
     width: 30px; height: inherit;
-    cursor: pointer;}
+    cursor: pointer;
+    background-image: url("../../../img/galleria_img/headBox/search_btn.png");
+    background-repeat: no-repeat;
+    background-position: center;}
