--- a/work/asset/b_step_01_layout/css/src/sajo/wrap.css
+++ b/work/asset/b_step_01_layout/css/src/sajo/wrap.css
@@ -1,3 +1,5 @@
 /* wrap.css */
 
-#wrap {width: 1200px; height: auto; min-height: 2000px; background: #ccc;}
+#wrap {
+  position: relative;
+  width: 1200px; height: auto; min-height: 2000px; background: #ccc;}
