--- a/work/asset/b_step_01_layout/css/src/sajo/productinfoBox.css
+++ b/work/asset/b_step_01_layout/css/src/sajo/productinfoBox.css
@@ -6,7 +6,7 @@
   width: 100%; height: 436px; background-color: #aff;}
 
 .prod_box {
-  position: relative;
+  /*position: relative;*/
   margin: auto;
   width: 592px; height: 311px; background-color: #fac;}
 
@@ -16,16 +16,17 @@
   width: 95px; height: 100px; background-color: #ffa;}
 
 .prod_box > li:nth-child(1)  {
-  position: absolute;
-  top: 0; left: 0;
+  /*position: absolute;
+  top: 0; left: 0;*/
   margin-left: 0;
   width: 194px; height: 206px; background-color: #aaa;}
 .prod_box > li:nth-child(2)  {}
 .prod_box > li:nth-child(3)  {}
 .prod_box > li:nth-child(4)  {}
 .prod_box > li:nth-child(5)  {
-  position: absolute;
-  top:0; right: 0;
+  /*position: absolute;
+  top:0; right: 0;*/
+  float: right;
   width: 94px; height: 206px; background-color: #aaa;}
 .prod_box > li:nth-child(6)  {}
 .prod_box > li:nth-child(7)  {}
