--- a/work/asset/a_beginner/css/base/reset.css
+++ b/work/asset/a_beginner/css/base/reset.css
@@ -10,6 +10,8 @@ ul,ol,li{list-style: none;}
 
 a {text-decoration: none; color: #333;}
 
+button {border: 0; background: transparent; cursor: pointer;}
+
 /* html5 --- */
 header, nav, article, section, footer, aside, figure, figcaption {display: block;}
 
@@ -18,12 +20,14 @@ header, nav, article, section, footer, aside, figure, figcaption {display: block
 
 .clearfix::after, .clearfix:after {content: " "; display: block; width: 100%; height: 0; clear: both;}
 
-.hidden_wrap a {display: block; width: 100%; height: 100%;}
-.hidden, .hidden_wrap span {
-  display: block; width: 0; height: 0; position: relative; z-index: -100; overflow: hidden;}
+.hidden,
+.hidden_wrap span {
+  display: block; width: 0; height: 0;
+  position: relative; z-index: -100; overflow: hidden;}
+.hidden_wrap a {
+  display: block; width: 100%; height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;}
 
-/* focus 처리시 */
-a:focus,
-button:focus,
-text-area:focus,
-select:focus{outline: 2px solid #f06; position: relative; z-index: 1000;}
+/* 접근성 */
+a:focus, button:focus {outline: 2px solid #fa0; position: relative; z-index: 1000;}
