--- a/work/asset/b_step_02_jquery/css/base/reset.css
+++ b/work/asset/b_step_02_jquery/css/base/reset.css
@@ -2,15 +2,15 @@
 /* 크로스브라우징을 가능하도록 각 브라우저의 기본형태의 상태를 동일하게 변경 */
 
 html,body {margin: 0; padding: 0; height: 100%;}
-
 h1,h2,h3,h4,h5,h6,
 p,pre,div,ul,ol,li,dl,dt,dd,img {margin: 0; padding: 0; border: 0; outline: 0;}
-
 ul,ol,li{list-style: none;}
-
 a {text-decoration: none; color: #333;}
 
 button {border: 0; background: transparent; cursor: pointer;}
+
+table,thead,tbody,tfoot,tr,th,td {border: 1px solid #333; border-spacing: 0; border-collapse: collapse; margin: 0; padding: 0;}
+caption {margin-bottom: 0.5rem; width: 100%; height: auto; font-weight: bold;}
 
 /* html5 --- */
 header, nav, article, section, footer, aside, figure, figcaption {display: block;}
