--- a/work/asset/b_step_02_jquery/css/base/reset.css
+++ b/work/asset/b_step_02_jquery/css/base/reset.css
@@ -23,7 +23,7 @@ header, nav, article, section, footer, aside, figure, figcaption {display: block
 .hidden,
 .hidden_wrap span {
   display: block; width: 0; height: 0;
-  position: relative; z-index: -100; overflow: hidden;}
+  position: absolute; z-index: -100; overflow: hidden;}
 .hidden_wrap a {
   display: block; width: 100%; height: 100%;
   background-repeat: no-repeat;
