--- a/work/asset/b_step_01_layout/css/base/reset.css
+++ b/work/asset/b_step_01_layout/css/base/reset.css
@@ -16,6 +16,7 @@ tfoot{background-color: #faa;}
 
 ul,ol,li{list-style:none;}
 a {text-decoration: none; color:#333;}
+a:hover {text-decoration: none; color: #333;}
 
 input, textarea, select{box-sizing: border-box; border: 1px solid #777; border-radius: 0;}
 input[type="text"],
