--- a/work/asset/b_step_01_layout/css/src/monfee/bestNews.css
+++ b/work/asset/b_step_01_layout/css/src/monfee/bestNews.css
@@ -40,4 +40,4 @@
 
 
 
-.news_01 .news_img {background-image: url(../../../img/test1/img/new_menu/menu_01.png);}
+/*.news_01 .news_img {background-image: url(../../../img/test1/img/new_menu/menu_01.png);}*/
