--- a/work/asset/b_step_01_layout/css/src/monfee/media1366.css
+++ b/work/asset/b_step_01_layout/css/src/monfee/media1366.css
@@ -9,7 +9,7 @@
 
 
 	/* issue */
-	.issue_icon {width: 66.578947vw; /*  1265 / 1900 * 100  */ background-color: #aa0;}
+	.issue_icon {width: 66.578947vw; /*  1265 / 1900 * 100  */}
 	.content_text {padding: 140px 70px 120px;}
 	.foot_box_wrap {padding-top: 5.124451vw; /*  70 / 1366 * 100  */}
 	.material_icon {width: 75.263158vw; /*  1430 / 1900 * 100  */}
