--- a/work/asset/b_step_01_layout/css/src/monfee/headBox.css
+++ b/work/asset/b_step_01_layout/css/src/monfee/headBox.css
@@ -1,14 +1,26 @@
 /* headBox.css */
 
 .head_box_wrap {
-  position: absolute; bottom: 0; left: 0;
+  position: absolute; z-index: 1500; bottom: 0; left: 0;
   width: 100%; height: 120px; background-color: #fff;
   box-shadow: 0 2px 2px rgba(0,0,0,0.5);}
 /*box-shadow: x y blur 0ffset color;*/
 .head_box_wrap.fixed {position: fixed; top: 0; bottom: auto;}
 
-#headBox {margin: auto;
+#headBox {position: relative; z-index: 50; margin: auto;
+	box-sizing: border-box; padding: 0 10px;
 	width: 960px; height: 100%;}
+
+#headBox:after {content: " "; display: block;
+  position: absolute; z-index: -50; top: 120px; left: 0;
+	width: 100%; height: 0; background-color: rgba(151,70,0,0.8);
+  background-image: url(../../../img/test1/img/character.svg);
+  background-repeat: no-repeat;
+  background-position: 7% 50%;
+  background-size: auto 50%; transition: height 500ms linear;}
+
+#headBox.top:after {top: auto; bottom: 7.5rem;}
+#headBox.show:after {height: 15rem;}
 
 /*
 $main : #a30;
@@ -47,6 +59,14 @@ h1 > a {background-image: url("../../../img/test1/img/h1_logo.png");}
 #gnb > ul  > li > a:focus:after,
 #gnb > ul  > li > a:focus::after {
   width: 80%; height: 3px; transform: translateY(-3px);}
+
+
+/* level2 */
+#gnb ul ol {padding-top: 1rem; width: 100%; height: auto; display: none;}
+#gnb ul > li {position: relative;}
+#gnb ul ol.top {position: absolute; bottom: 7.5rem; left: 0;}
+#gnb ul ol > li {margin-bottom: 0.5rem; width: 100%; height: auto;}
+#gnb ul ol > li > a {font-size: 1.1rem; color: #fff;}
 
 
 
