--- a/work/asset/b_step_01_layout/css/src/monfee/issue.css
+++ b/work/asset/b_step_01_layout/css/src/monfee/issue.css
@@ -1,15 +1,52 @@
 /* issue.css */
 
-.issue_text {margin-bottom: 100px; width: 100%; height: 100%; background-color: #0af;}
+
+/* issue text */
+.issue_text{position: relative; margin-bottom: 100px; width: 100%; height: 100%; background-color: #afc;}
+.issue_text .btn{position: absolute; z-index: 500; right:13%; bottom:15%; box-sizing: border-box; padding: 0.5rem; 
+              width:auto; height:3rem; background-color: #555;}
+.issue_text .indicator{float: left; width: auto; height: 100%;}
+.issue_text .indicator>li{margin-right:1rem; float: left; width: 30px; height: 30px;}
+.issue_text .indicator>li>a{display: block; width: 100%; height: 100%; background-color: #fff; border-radius:100%;}
+.issue_text .indicator>li.active>a{background-color: #a30;}
+.issue_text .indicator>li>a:hover{background-color:rgba(151,70,0,0.5);}
+
+.issue_text div{float:left; width: auto; height: 100%;}
+.issue_text div>button{float:left; width: 30px; height: 30px; color:#fff; font-size: 1.7rem;}
+.issue_text div>button.pause{margin-right: 1rem;}
+.issue_text div>button.play{}
+.issue_text div>button.active{color:#a30;}
+
+.issue_text .issue_banner{width:100%; height: 100%;}
+.issue_text .issue_banner>ul{width: 500%; height: 100%;}
+.issue_text .issue_banner>ul>li{position: relative; width:calc(100% / 5); height: 100%; float: left; background-repeat: no-repeat;
+  background-position: center; background-size:cover;}
+.issue_text .issue_banner>ul>li:nth-child(1){background-image: url("../../../img/test1/img/issueBanner/issue_banner_01.png");}
+.issue_text .issue_banner>ul>li:nth-child(2){background-image: url("../../../img/test1/img/issueBanner/issue_banner_02.png");}
+.issue_text .issue_banner>ul>li:nth-child(3){background-image: url("../../../img/test1/img/issueBanner/issue_banner_03.png");}
+.issue_text .issue_banner>ul>li:nth-child(4){background-image: url("../../../img/test1/img/issueBanner/issue_banner_04.png");}
+
+.issue_text .issue_banner dl{position: absolute; top:10%; left:10%; width: 80%; height:70%; padding: 3rem; background-color:rgba(150,250,250,0.9);}
+.issue_text .issue_banner dl>dt{font-size: 3rem; font-weight: bold; border-bottom: 1px solid  #333;}
+.issue_text .issue_banner dl>dd{font-size: 1.5rem;}
 
 
+
+/* issue icon 제품 간단한 설명 */
 .issue_icon {
 	position: relative; margin: auto; margin-bottom: 100px;
-	width: 960px; height: 300px; background-color: #fa0;}
+	width: 960px; height: 300px;}
 
 .issue_icon > div {
-	width: 300px; height: 300px; background-color: #fac;
-	border-radius: 100%; text-align: center;}
+	width: 300px; height: 300px;
+	border-radius: 100%; text-align: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;}
+
+.issue_icon > div:nth-child(1) {background-image: url(../../../img/test1/img/issue/issue_icon_01.png);}
+.issue_icon > div:nth-child(2) {background-image: url(../../../img/test1/img/issue/issue_icon_02.png);}
+.issue_icon > div:nth-child(3) {background-image: url(../../../img/test1/img/issue/issue_icon_03.png);}
 
 .issue_icon > div > a {position: relative; z-index: 100; display: block; box-sizing: border-box; padding-top: 4rem;
 	width: 100%; height: 100%; font-size: 2.5rem; color: #fff; text-transform: capitalize; line-height: 1.3;}
